  - Geometry of file chooser is saved
- Utilities->File System Browser displays a stand-alone version of the file
  chooser

+ Enhancements

- Major changes to VFS code to support browsing
- Updated JavaScript mode (Ollie Rutherford)
- Tool bar buttons now have a 'rollover' effect
- Global Options dialog box re-arranged somewhat
- 'Send' command moved to a plugin, out of the core

+ Bug Fixes

- Plugins couldn't be removed on systems that disallow removing open files,
  such as Windows (since 2.6pre1)
- FtpVFS.getFileLength() always returned 0 (since 2.6pre1)
- FtpVFS would throw a NullPointerException if an error occurred while
  connecting to the FTP server
- An autosave setting of '0' caused problems (since 2.6pre1)
- Macros invoked using keyboard shortcuts would always fail with a
  "macro not found" error (since 2.6pre1)
- 'HTML/Close Tag' macro relied on non-existent goto-end-indent action

+ API Changes

- org.gjt.sp.jedit.REFileFilter class removed
- Many changes made to org.gjt.sp.jedit.VFS class
- New AbstractOptionPane.addSeparator(String) method
- New methods added to GUIUtilities class:
  input(Component comp, String name, String[] args, String def);
  inputProperty(Component comp, String name, String[] args, String def);
- MiscUtilities.constructPath() no longer returns a canonical path (ie,
  with all symlinks resolved)
- New method: GUIUtilities.loadMenu(String). Plugins that target jEdit
  2.6pre2 (or 2.5.2) can use this method instead of the older loadMenu()
  form.

* Version 2.6pre1

+ New Features

- Macros can now be added to the tool bar and right-click context menu
- The bracket matching code now only checks syntax tokens of the same type
  as the bracket for matches. As a result, string literals and comments
  containing brackets should no longer cause problems
- New 'EditBuddy' plugin, included in the jEdit distribution, displays
  'initial setup' and 'new version' wizards when jEdit is first run and